Fixed bugs - 278 and 280 and fixed UI alignment issues

--- a/src/app/component/projects/view-projects/view-projects.css
+++ b/src/app/component/projects/view-projects/view-projects.css
@@ -116,7 +116,7 @@
   display: grid;
   grid-template-columns: 0.2fr 1fr; /* Two equal columns */
   gap: 20px;
-  margin-bottom: 35px;
+  margin-bottom: 30px;
 }
 .fa-check-circle {
   color: green;
@@ -898,7 +898,7 @@
 .chat-messages {
   flex: 1; /*  fills space */
   overflow-y: auto; /*  scroll */
-  padding: 10px;
+  padding: 0 10px 10px 10px;
 }
 
 .convoType-icon {
